@@ -13,7 +13,7 @@
  **/
 package org.bonitasoft.engine.persistence;
 
-import static org.bonitasoft.engine.services.Vendor.*;
+import static org.bonitasoft.engine.services.Vendor.POSTGRES;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -23,6 +23,7 @@ import java.util.Properties;
 
 import javax.persistence.SharedCacheMode;
 
+import lombok.Getter;
 import org.bonitasoft.engine.services.Vendor;
 import org.hibernate.Interceptor;
 import org.hibernate.SessionFactory;
@@ -30,11 +31,11 @@ import org.hibernate.boot.Metadata;
 import org.hibernate.boot.MetadataBuilder;
 import org.hibernate.boot.MetadataSources;
 import org.hibernate.boot.SessionFactoryBuilder;
-import org.hibernate.boot.registry.BootstrapServiceRegistry;
 import org.hibernate.boot.registry.BootstrapServiceRegistryBuilder;
 import org.hibernate.boot.registry.StandardServiceRegistry;
 import org.hibernate.boot.registry.StandardServiceRegistryBuilder;
 import org.hibernate.mapping.PersistentClass;
+import org.hibernate.service.ServiceRegistry;
 import org.hibernate.type.BasicType;
 
 /**
@@ -47,9 +48,12 @@ public class HibernateConfigurationProviderImpl implements HibernateConfiguratio
     private final HibernateResourcesConfigurationProvider hibernateResourcesConfigurationProvider;
     protected final Properties properties;
     private final List<String> mappingExclusions;
-    private Vendor vendor;
+    @Getter
+    protected Vendor vendor;
+    @Getter
     private SessionFactory sessionFactory;
-    private List<Class<? extends PersistentObject>> mappedClasses = new ArrayList<>();
+    @Getter
+    private final List<Class<? extends PersistentObject>> mappedClasses = new ArrayList<>();
 
     public HibernateConfigurationProviderImpl(final Properties properties,
             final HibernateResourcesConfigurationProvider hibernateResourcesConfigurationProvider,
@@ -76,27 +80,45 @@ public class HibernateConfigurationProviderImpl implements HibernateConfiguratio
 
     @Override
     public void bootstrap(Properties extraHibernateProperties) {
-        BootstrapServiceRegistryBuilder bootstrapRegistryBuilder = new BootstrapServiceRegistryBuilder();
-        BootstrapServiceRegistry bootstrapRegistry = bootstrapRegistryBuilder.build();
-        StandardServiceRegistryBuilder standardRegistryBuilder = new StandardServiceRegistryBuilder(bootstrapRegistry);
+        StandardServiceRegistryBuilder standardRegistryBuilder = new StandardServiceRegistryBuilder(
+                new BootstrapServiceRegistryBuilder().build());
         Properties allProps = gatherAllProperties(extraHibernateProperties, standardRegistryBuilder);
-        this.vendor = Vendor.fromHibernateDialectProperty(allProps.getProperty("hibernate.dialect"));
         StandardServiceRegistry standardRegistry = standardRegistryBuilder.build();
+
+        this.vendor = Vendor.fromHibernateDialectProperty(allProps.getProperty("hibernate.dialect"));
+        setCustomHibernateDataTypesAndProperties();
+
+        Metadata metadata = buildHibernateMetadata(standardRegistry);
+
+        this.sessionFactory = applyInterceptors(metadata, allProps).build();
+
+        for (PersistentClass entityBinding : metadata.getEntityBindings()) {
+            mappedClasses.add(entityBinding.getMappedClass());
+        }
+    }
+
+    /**
+     * Set custom Hibernate data types using {@link CustomDataTypesRegistration} and set Hibernate system properties.
+     */
+    protected void setCustomHibernateDataTypesAndProperties() {
         switch (vendor) {
-            case ORACLE:
-            case SQLSERVER:
-            case MYSQL:
-                System.setProperty("hibernate.dialect.storage_engine", "innodb");
-            case OTHER:
-                CustomDataTypesRegistration.addTypeOverride(new XMLType());
-                break;
-            case POSTGRES:
+            case POSTGRES -> {
                 CustomDataTypesRegistration.addTypeOverride(new PostgresMaterializedBlobType());
                 CustomDataTypesRegistration.addTypeOverride(new PostgresMaterializedClobType());
                 CustomDataTypesRegistration.addTypeOverride(new PostgresXMLType());
-                break;
+            }
+            case OTHER -> CustomDataTypesRegistration.addTypeOverride(new XMLType());
+            default -> throw new IllegalStateException("Unsupported vendor: " + vendor);
         }
+    }
 
+    /**
+     * Build the hibernate metadata from the provided resources and entities.
+     *
+     * @param standardRegistry the standard registry of services needed to create metadata sources
+     * @return the hibernate metadata
+     */
+    private Metadata buildHibernateMetadata(ServiceRegistry standardRegistry) {
         MetadataSources metadataSources = new MetadataSources(standardRegistry) {
 
             @Override
@@ -116,31 +138,33 @@ public class HibernateConfigurationProviderImpl implements HibernateConfiguratio
         for (Class entity : hibernateResourcesConfigurationProvider.getEntities()) {
             metadataSources.addAnnotatedClass(entity);
         }
+        return metadataSources.buildMetadata();
+    }
 
-        Metadata metadata = metadataSources.buildMetadata();
+    /**
+     * Apply interceptors to a new session factory.
+     *
+     * @param metadata the hibernate metadata
+     * @param allProps the hibernate properties
+     * @return a new session factory builder
+     * @throws IllegalStateException if an interceptor class is unknown or cannot be instantiated
+     */
+    protected SessionFactoryBuilder applyInterceptors(Metadata metadata, Properties allProps)
+            throws IllegalStateException {
         SessionFactoryBuilder sessionFactoryBuilder = metadata.getSessionFactoryBuilder();
         final String className = allProps.getProperty("hibernate.interceptor");
         if (className != null && !className.isEmpty()) {
             try {
-                final Interceptor interceptor = (Interceptor) Class.forName(className).newInstance();
-                sessionFactoryBuilder.applyInterceptor(interceptor);
-            } catch (final ClassNotFoundException | IllegalAccessException | InstantiationException cnfe) {
-                throw new IllegalStateException("Unknown interceptor class " + className, cnfe);
+                sessionFactoryBuilder.applyInterceptor(
+                        (Interceptor) Class.forName(className).getDeclaredConstructor().newInstance());
+            } catch (final ReflectiveOperationException e) {
+                throw new IllegalStateException("Unknown interceptor class " + className, e);
             }
         }
         if (vendor == POSTGRES) {
             sessionFactoryBuilder.applyInterceptor(new PostgresInterceptor());
         }
-        if (vendor == SQLSERVER) {
-            sessionFactoryBuilder.applyInterceptor(new SQLServerInterceptor());
-        }
-        if (vendor == ORACLE) {
-            sessionFactoryBuilder.applyInterceptor(new OracleInterceptor());
-        }
-        this.sessionFactory = sessionFactoryBuilder.build();
-        for (PersistentClass entityBinding : metadata.getEntityBindings()) {
-            mappedClasses.add(entityBinding.getMappedClass());
-        }
+        return sessionFactoryBuilder;
     }
 
     protected void applyCacheMode(MetadataBuilder metadataBuilder) {
@@ -150,29 +174,13 @@ public class HibernateConfigurationProviderImpl implements HibernateConfiguratio
     protected Properties gatherAllProperties(Properties extraHibernateProperties,
             StandardServiceRegistryBuilder standardRegistryBuilder) {
         Properties allProps = new Properties();
-        for (Map.Entry<Object, Object> extraProp : properties.entrySet()) {
-            allProps.put(extraProp.getKey(), extraProp.getValue());
-        }
-        for (Map.Entry<Object, Object> extraProp : extraHibernateProperties.entrySet()) {
-            allProps.put(extraProp.getKey(), extraProp.getValue());
-        }
+        allProps.putAll(properties);
+        allProps.putAll(extraHibernateProperties);
 
         for (Map.Entry<Object, Object> prop : allProps.entrySet()) {
             standardRegistryBuilder.applySetting(prop.getKey().toString(), prop.getValue());
         }
         return allProps;
-    }
-
-    public Vendor getVendor() {
-        return vendor;
-    }
-
-    public SessionFactory getSessionFactory() {
-        return sessionFactory;
-    }
-
-    public List<Class<? extends PersistentObject>> getMappedClasses() {
-        return mappedClasses;
     }
 
 }
